<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:divider="@drawable/dialog_divider_horizontal"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/rate_dialog_title"
            android:textAppearance="?android:attr/android:textAppearance"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/rate_dialog_message"
            android:textAppearance="?android:attr/android:textAppearance"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRate"
        style="@style/DialogButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/rate_dialog_ok" />

    <TextView
        android:id="@+id/tvNeverShow"
        style="@style/DialogButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/rate_dialog_no" />

    <TextView
        android:id="@+id/tvShowLater"
        style="@style/DialogButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/rate_dialog_cancel" />
</LinearLayout>